--- a/client/src/pages/institution-page/InstitutionPage.scss
+++ b/client/src/pages/institution-page/InstitutionPage.scss
@@ -1,11 +1,13 @@
 .institution-container{
   display: flex;
-  height: 80vh;
+  height: auto;
   width: 100%;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 .event-display{
-
+  width: 66.5%;
 }
