--- a/client/src/pages/institution-page/InstitutionPage.scss
+++ b/client/src/pages/institution-page/InstitutionPage.scss
@@ -1,4 +1,4 @@
-.institution-container{
+.institution-container {
   display: flex;
   height: auto;
   width: 100%;
@@ -8,6 +8,9 @@
   overflow: hidden;
 }
 
-.event-display{
-  min-width: 66.5%;
+.event-display {
+  margin-left: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
