--- a/client/src/pages/institution-page/InstitutionPage.scss
+++ b/client/src/pages/institution-page/InstitutionPage.scss
@@ -14,3 +14,10 @@
   justify-content: center;
   align-items: center;
 }
+
+.inst-statistics-constainer{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  flex-direction: column;
+}
