--- a/client/src/pages/institution-page/InstitutionPage.scss
+++ b/client/src/pages/institution-page/InstitutionPage.scss
@@ -20,4 +20,9 @@
   justify-content: space-between;
   width: 100%;
   flex-direction: column;
+  align-items: center;
+}
+
+a:hover {
+  box-shadow: inset 250px 0 0 0 #F5A524;
 }
