--- a/client/src/pages/citizen-page/CitizenPage.scss
+++ b/client/src/pages/citizen-page/CitizenPage.scss
@@ -1,20 +1,25 @@
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #951111;
-  overflow-x: hidden;
-  padding-top: 60px;
+.citizen-container{
+  display: flex;
+  height: auto;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
 }
 
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
+.cit-statistics-constainer{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
+a:hover {
+  box-shadow: inset 250px 0 0 0 #5E1DAD;
+}
+
+.activity-table{
+
 }
