--- a/client/src/pages/institution-page/InstitutionPage.scss
+++ b/client/src/pages/institution-page/InstitutionPage.scss
@@ -23,6 +23,6 @@
   align-items: center;
 }
 
-a:hover {
-  box-shadow: inset 250px 0 0 0 #F5A524;
+#inst-explorer:hover {
+  box-shadow: inset 280px 0 0 0 #F5A524;
 }
