--- a/client/src/pages/citizen-page/CitizenPage.scss
+++ b/client/src/pages/citizen-page/CitizenPage.scss
@@ -5,7 +5,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  overflow: hidden;
 }
 
 .cit-statistics-constainer{
@@ -18,6 +17,12 @@
 
 #explorer:hover {
   box-shadow: inset 280px 0 0 0 #5E1DAD;
+}
+
+footer{
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 
 .activity-table{
